// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering Cached Image Snapshot of the initial render 1`] = `
<Image
  source={
    {
      "testUri": "../../../src/assets/images/logo/wireApps.png",
    }
  }
  style={
    [
      {},
      {
        "resizeMode": "cover",
      },
    ]
  }
/>
`;

exports[`Rendering Cached Image Snapshot with resizeMode center prop 1`] = `
[
  <View
    style={
      {
        "alignItems": "center",
        "alignSelf": "center",
        "flexDirection": "column",
        "height": 50,
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <ActivityIndicator
      color="#111111"
      size={25}
    />
  </View>,
  <View
    style={
      [
        {
          "overflow": "hidden",
        },
        [
          {
            "zIndex": -1,
          },
          {},
        ],
      ]
    }
  >
    <FastImageView
      defaultSource={null}
      onFastImageError={[Function]}
      onFastImageLoadEnd={[Function]}
      onFastImageLoadStart={[Function]}
      resizeMode="center"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>,
]
`;

exports[`Rendering Cached Image Snapshot with resizeMode contain prop 1`] = `
[
  <View
    style={
      {
        "alignItems": "center",
        "alignSelf": "center",
        "flexDirection": "column",
        "height": 50,
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <ActivityIndicator
      color="#111111"
      size={25}
    />
  </View>,
  <View
    style={
      [
        {
          "overflow": "hidden",
        },
        [
          {
            "zIndex": -1,
          },
          {},
        ],
      ]
    }
  >
    <FastImageView
      defaultSource={null}
      onFastImageError={[Function]}
      onFastImageLoadEnd={[Function]}
      onFastImageLoadStart={[Function]}
      resizeMode="contain"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>,
]
`;
